--- a/AuthorizeView.html
+++ b/AuthorizeView.html
@@ -4,14 +4,35 @@
  a, body {
    font-family:Helvetica Neue;
    color:#999999;
+   font-size:20pt;  
  }
- a, span {
-   font-size:20pt;
+ 
+ img {
+   width: 360px;
  }
+
+ 
+@media (max-width: 750px) {
+   img {
+     width: 280px;
+   }
+   a, body {
+     font-size:17pt;
+   } 
+}
+
+@media (max-width: 550px) {
+   img {
+     width: 200px;
+   }
+   a, body {
+     font-size:13pt;
+   }
+}
 
  .user {
    padding:20px;
-   font-size: 16pt;
+   font-size: 80%;
  }
 
 </style>
@@ -21,14 +42,14 @@
   <tr>
     <td width='50%'>
       <div style='float:right;'>
-        <a href='<?!=authorizeLink?>'>
+        <a href='<?!=authorizeLink?>' target="_top">
           <img src='https://www.bkper.com/images/appsScript.svg'/>
         </a>
       </div>
     </td>
     <td width='50%'>
-      <div style='padding-left:40px;width:400px'>
-        <a href='<?!=authorizeLink?>'>
+      <div class='bkperLogo'>
+        <a href='<?!=authorizeLink?>' target="_top">
           <img src='https://www.bkper.com/images/logo.svg'/>
         </a>
       </div>
@@ -36,7 +57,7 @@
   </tr>
   <tr>
     <td colspan='2' align='center'>
-      <a href='<?!=authorizeLink?>'>Click to authorize Google Apps integration </a>
+      <a href='<?!=authorizeLink?>' target="_top">Click to authorize Google Apps integration </a>
     </td>
   </tr>
 </table>
