Changing main url to app.bkper.com

--- a/BkperApp/AuthorizeView.html
+++ b/BkperApp/AuthorizeView.html
@@ -43,14 +43,14 @@
     <td width='50%'>
       <div style='float:right;'>
         <a href='<?!=authorizeLink?>' target="_top">
-          <img src='https://www.bkper.com/images/appsScript.svg'/>
+          <img src='https://app.bkper.com/images/appsScript.svg'/>
         </a>
       </div>
     </td>
     <td width='50%'>
       <div class='bkperLogo'>
         <a href='<?!=authorizeLink?>' target="_top">
-          <img src='https://www.bkper.com/images/logo.svg'/>
+          <img src='https://app.bkper.com/images/logo.svg'/>
         </a>
       </div>
     </td>
