--- a/BkperApp/AuthorizedView.html
+++ b/BkperApp/AuthorizedView.html
@@ -106,14 +106,14 @@
     <td width='50%'>
       <div class="appsScriptContainer">
         <a href='<?!=continueUrl?>' target="_top">
-          <img src='https://www.bkper.com/images/appsScript.svg'/>
+          <img src='https://app.bkper.com/images/appsScript.svg'/>
         </a>
       </div>
     </td>
     <td width='50%'>
       <div class="bkperContainer" >
         <a href='<?!=continueUrl?>' target="_top">
-          <img src='https://www.bkper.com/images/logo_10_degree.svg'/>
+          <img src='https://app.bkper.com/images/logo_10_degree.svg'/>
         </a>
       </div>
     </td>
