--- a/BkperApp/AuthorizedViewClose.html
+++ b/BkperApp/AuthorizedViewClose.html
@@ -93,12 +93,12 @@
   <tr>
     <td width='50%'>
       <div class="appsScriptContainer">
-        <img src='https://www.bkper.com/images/appsScript.svg'/>
+        <img src='https://app.bkper.com/images/appsScript.svg'/>
       </div>
     </td>
     <td width='50%'>
       <div class="bkperContainer" >
-        <img src='https://www.bkper.com/images/logo_10_degree.svg'/>
+        <img src='https://app.bkper.com/images/logo_10_degree.svg'/>
       </div>
     </td>
   </tr>
