--- a/auth/index.html
+++ b/auth/index.html
@@ -1,7 +1,7 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
-    <meta http-equiv="refresh" content="0;URL='https://script.google.com/macros/s/AKfycbz8F5FGTTW72pQBfDvGjEB4eglVmOfhG_a9Qb3EXYjVo5IICg/exec'" />
+    <meta http-equiv="refresh" content="0;URL='https://app.bkper.com'" />
   </head>
   <body>
   </body>
